2004-02-13  Mikael Hallendal  <micke@imendio.com>

	* Makefile.am: 
	* configure.in:
	* libdevhelp-1.0.pc.in:
	- Moved the pc file and renamed it.
	
	* NEWS:
	- Updated for 0.8
	
	* src/Makefile.am:
	* src/devhelp.pc.in:
	- Removed this pc file.

2004-02-13  Naba Kumar  <naba@gnome.org>
 
	* configure.in: 
	- Bumped version to 0.8
	- Installs libdevhelp
	
	* src/Makefile.am, src/.cvsignore, (new) src/devhelp.pc.in:
	- Installs libdevhelp header files and pkgconfig file, so that 
	  external programs can also use libdevhelp.

2004-02-01  Robert Sedak  <robert.sedak@sk.htnet.hr>

	* configure.in: Added "hr" (Croatian) to ALL_LINGUAS. 

2004-01-13  Laurent Dhima  <laurenti@alblinux.net>

	* configure.in: Added "sq" to ALL_LINGUAS.

2004-01-05  Mikael Hallendal  <micke@imendio.com>

	* configure.in: 
	- Don't try to output removed Makefiles in libegg/*
	- Output .desktop and .keys files.

2004-01-04  Ross Burton  <ross@burtonini.com>

	* configure.in:
	Depend on GTK+ 2.3.1.
	
	* Makefile.am:
	* libegg/:
	Remove libegg!

	* src/dh-window.c:
	* ui/window.ui:
	* src/Makefile.am:
	Switch from EggAction to GtkAction.

2003-12-14  Jordi Mallach  <jordi@sindominio.net>

	* configure.in (ALL_LINGUAS): Added "ca" (Catalan).

2003-09-15  Fatih Demir <kabalak@gtranslator.org>

	* configure.in: Added "tr" (Turkish) to the languages' list.

2003-06-29  Mikael Hallendal  <micke@imendio.com>

	* src/dh-main.c: include string.h, fixes warning on FreeBSD.

2003-06-29  Richard Hult  <richard@imendio.com>

	* misc/devhelp.el: 
	* misc/devhelp.vim: Add comment about -g. 

2003-06-29  Mikael Hallendal  <micke@imendio.com>

        * NEWS: Updated, missed this in the 0.7 tarball.

        * Release 0.7

	* configure.in: Bumped to 0.7
	
	* devhelp.spec.in: Updated for 0.7 and new web site.

2003-06-29  Richard Hult  <richard@imendio.com>

	* src/dh-window.c (dh_window_new): Don't make the size relative to
	the resolution, that didn't work out very well.
